# DMSR-WGAN

./: .gitignore  LICENCE.txt  README.md  pyproject.toml
dm_analysis/: __init__.py  halo.py  halo_shape.py  merger_tree.py  minimal_spanning_tree.py  power_spectrum.py
dmsr/: analysis.py  swift_processing.py
dmsr/data_tools/: __init__.py  dataset.py  loaders.py  mock_data.py  utils.py
dmsr/dmsr_gan/: __init__.py  blocks.py  critic.py  dataset.py  dmsr_critic.py  dmsr_critic_original.py  dmsr_dataset.py  dmsr_density_branch_critic.py  dmsr_generator.py  dmsr_monitor.py  dmsr_wgan.py  generator.py  monitor.py
dmsr/field_analysis/: cloud_in_cells.py  neighbour_distance.py
dmsr/field_operations/: augmentation.py  conversion.py  resize.py
dmsr/monitors/: __init__.py  loss_monitor.py  manager.py  monitor.py  samples_monitor.py  spectrum_monitor.py  upscale_monitor.py
dmsr/wgan/: __init__.py  blocks.py  conv.py  critic.py  density_critic.py  generator.py  wgan.py
example/: dataset_config_train.json  dataset_config_train.toml  dataset_config_valid.json  dataset_config_valid.toml  slurm_example.sh  training_parameters.json  training_parameters.toml
scripts/: dataset_preparation.py  dataset_preperation.py  dataset_spectra.py  dataset_statistics.py  dmsr_train.py  swift_enhance.py
scripts/data_processing/: dataset_preperation.py  dataset_statistics.py  dataset_testing.py  prepare_spectra.py
swift_tools/: data.py  density.py  enhance.py  fields.py  friends_of_friends.py  positions.py
tests/: test_dataset_preparation.py  test_integration.py  test_swift_enhance.py
(+160 files in other folders)
